--- a/UI/ColorVision.ImageEditor/EditorTools/Algorithms/GammaCorrectionWindow.xaml
+++ b/UI/ColorVision.ImageEditor/EditorTools/Algorithms/GammaCorrectionWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:hc="https://handyorg.github.io/handycontrol"
         Title="伽马校正" Height="200" Width="400"
         WindowStartupLocation="CenterOwner"
+        Background="{StaticResource GlobalBackground}"
         ResizeMode="NoResize">
     <Grid Margin="10">
         <Grid.RowDefinitions>
