--- a/Projects/ProjectARVRPro/Process/ProcessManagerWindow.xaml
+++ b/Projects/ProjectARVRPro/Process/ProcessManagerWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ProjectARVRPro.ProcessManagerWindow"
+﻿<Window x:Class="ProjectARVRPro.Process.ProcessManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ProjectARVRPro"
+        xmlns:local="clr-namespace:ProjectARVRPro.Process"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:ProcessManager}"
         Title="流程处理配置" Height="450" Width="820" Initialized="Window_Initialized">
