--- a/Projects/ProjectARVRPro/Recipe/EditRecipeWindow.xaml
+++ b/Projects/ProjectARVRPro/Recipe/EditRecipeWindow.xaml
@@ -21,10 +21,21 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Border Background="{DynamicResource  SecondaryRegionBrush}" Grid.RowSpan="2" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" />
-        <ScrollViewer>
-            <StackPanel x:Name="EditStackPanel" Margin="5">
-            </StackPanel>
-        </ScrollViewer>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="150"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TreeView Name="treeView" SelectedItemChanged="TreeView_SelectedItemChanged" Margin="5,5,0,0"/>
+            <Border  Grid.Column="1" Margin="5,5,5,0"  Background="{DynamicResource GlobalBackground}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" CornerRadius="5">
+                <ScrollViewer x:Name="PropertyScrollViewer" Margin="5">
+                    <StackPanel x:Name="EditStackPanel">
+
+                    </StackPanel>
+                </ScrollViewer>
+            </Border>
+
+        </Grid>
         <Grid Grid.Row="1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="5">
                 <Button Content="保存" Foreground="White" Background="{StaticResource PrimaryBrush}" BorderThickness="0" Click="Save_Click" Margin="5,0,0,0"/>
