--- a/Projects/ProjectLUX/Recipe/EditRecipeWindow.xaml
+++ b/Projects/ProjectLUX/Recipe/EditRecipeWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="ProjectLUX.EditFixWindow"
+﻿<Window x:Class="ProjectLUX.EditRecipeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectLUX"
-         xmlns:ui ="http://schemas.lepo.co/wpfui/2022/xaml"
+        xmlns:ui ="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
-        Title="ObjectiveTestResultFixWindow" Height="450" Width="600" Background="{StaticResource GlobalBackground}" Initialized="Window_Initialized">
+        Title="EditRecipeWindow" Height="450" Width="800" Background="{StaticResource GlobalBackground}" Initialized="Window_Initialized">
     <Window.Resources>
         <Style TargetType="{x:Type TextBlock}">
             <Setter Property="Foreground" Value="{DynamicResource GlobalTextBrush}"/>
@@ -21,10 +21,21 @@
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Border Background="{DynamicResource  SecondaryRegionBrush}" Grid.RowSpan="2" BorderBrush="{DynamicResource BorderBrush}"  BorderThickness="1" />
-        <ScrollViewer>
-            <StackPanel x:Name="EditStackPanel" Margin="5">
-            </StackPanel>
-        </ScrollViewer>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <TreeView Name="treeView" SelectedItemChanged="TreeView_SelectedItemChanged" Margin="5,5,0,0"/>
+            <Border  Grid.Column="1" Margin="5,5,5,0"  Background="{DynamicResource GlobalBackground}" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" CornerRadius="5">
+                <ScrollViewer x:Name="PropertyScrollViewer" Margin="5">
+                    <StackPanel x:Name="EditStackPanel">
+
+                    </StackPanel>
+                </ScrollViewer>
+            </Border>
+
+        </Grid>
         <Grid Grid.Row="1">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right" Margin="5">
                 <Button Content="保存" Foreground="White" Background="{StaticResource PrimaryBrush}" BorderThickness="0" Click="Save_Click" Margin="5,0,0,0"/>
