--- a/Projects/ProjectLUX/LUXWindow.xaml
+++ b/Projects/ProjectLUX/LUXWindow.xaml
@@ -271,6 +271,9 @@
             <StatusBarItem>
                 <Button Content="变更日志" Command="{Binding OpenChangeLogCommand}"/>
             </StatusBarItem>
+            <StatusBarItem>
+                <Button Content="测试" Click="Button_Click" />
+            </StatusBarItem>
         </StatusBar>
 
     </Grid>
