--- a/Engine/ColorVision.Engine/Batch/BatchProcessManagerWindow.xaml
+++ b/Engine/ColorVision.Engine/Batch/BatchProcessManagerWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:ColorVision.Engine.Batch"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:BatchManager}"
-        Title="流程处理配置" Height="450" Width="820" Initialized="Window_Initialized">
+        Title="流程处理配置" Height="450" Width="830" Initialized="Window_Initialized">
     <Window.Resources>
         <local:TypeNameConverter x:Key="TypeNameConverter"/>
     </Window.Resources>
@@ -47,8 +47,27 @@
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
                 </ComboBox>
+                <StackPanel Orientation="Horizontal" Grid.Column="6">
+                    <Button  Content="添加" Margin="12 0 0 0" Padding="12 4" Command="{Binding AddMetaCommand}"/>
+                    <Button Grid.Column="1" Margin="5,1,5,0" HorizontalAlignment="Left" Command="{Binding BatchConfig.EditCommand}" Padding="2" Height="30" Width="30" >
+                        <Button.Triggers>
+                            <EventTrigger RoutedEvent="Button.Click">
+                                <BeginStoryboard>
+                                    <Storyboard>
+                                        <DoubleAnimation Storyboard.TargetName="rotateTransform2" Storyboard.TargetProperty="Angle" From="0" To="360" Duration="0:0:0.5" FillBehavior="Stop"/>
+                                    </Storyboard>
+                                </BeginStoryboard>
+                            </EventTrigger>
+                        </Button.Triggers>
+                        <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" RenderTransformOrigin="0.5,0.5" FontSize="20" Foreground="{DynamicResource GlobalTextBrush}">
+                            <TextBlock.RenderTransform>
+                                <RotateTransform x:Name="rotateTransform2"/>
+                            </TextBlock.RenderTransform>
+                        </TextBlock>
+                    </Button>
+                </StackPanel>
 
-                <Button Grid.Column="6" Content="添加" Margin="12 0 0 0" Padding="12 4" Command="{Binding AddMetaCommand}"/>
+
             </Grid>
         </GroupBox>
 
