--- a/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
@@ -308,14 +308,14 @@
                     </StackPanel>
 
                     <DockPanel Margin="0,2" Visibility="{Binding Config.CFW.IsNDPort,Converter={StaticResource bool2VisibilityConverter}}">
-                        <Button  DockPanel.Dock="Right" Content="调整NDPort"  Click="NDport_Click" />
+                        <Button  DockPanel.Dock="Right" Content="{x:Static properties:Resources.ChangeNDPort}"  Click="NDport_Click" />
                         <TextBlock Text="NDPort" />
                         <TextBox Text="{Binding Config.NDPort}"  BorderThickness="0,0,0,1" Margin="5,0"/>
                     </DockPanel>
 
                     <StackPanel Margin="2" Visibility="{Binding Config.MotorConfig.IsUseMotor,Converter={StaticResource bool2VisibilityConverter}}">
                         <DockPanel >
-                            <Button  DockPanel.Dock="Right" Content="自动聚焦" Click="AutoFocus_Click"   />
+                            <Button  DockPanel.Dock="Right" Content="{x:Static properties:Resources.AutoFocus}" Click="AutoFocus_Click"   />
                             <Grid Width="20" Margin="5,0" DockPanel.Dock="Right" HorizontalAlignment="Left">
                                 <TextBlock Text="&#xE713;"  HorizontalAlignment="Center" FontFamily="Segoe MDL2 Assets" FontSize="16" Foreground="{DynamicResource GlobalTextBrush}" RenderTransformOrigin="0.5,0.5">
                                     <TextBlock.RenderTransform>
@@ -338,21 +338,21 @@
                         </DockPanel>
 
                         <DockPanel Margin="0,2">
-                            <Button  DockPanel.Dock="Right" Content="移动"  Click="Move_Click" />
-                            <CheckBox  x:Name="CheckBoxIsAbs" Content="绝对位置" />
+                            <Button  DockPanel.Dock="Right" Content="{x:Static properties:Resources.Move}"  Click="Move_Click" />
+                            <CheckBox  x:Name="CheckBoxIsAbs" Content="{x:Static properties:Resources.AbsolutePosition}" />
                             <TextBox x:Name="TextPos" Text="0"  BorderThickness="0,0,0,1" Margin="5,0"/>
                         </DockPanel>
                         <DockPanel Margin="0,2">
-                            <Button  DockPanel.Dock="Right" Content="调整光圈"  Click="Move1_Click" />
-                            <TextBlock Text="光圈F"  Width="40"  />
+                            <Button  DockPanel.Dock="Right" Content="{x:Static properties:Resources.AdjustAperture}"  Click="Move1_Click" />
+                            <TextBlock Text="{x:Static properties:Resources.ApertureF}"  Width="40"  />
                             <TextBox x:Name="TextDiaphragm" Text="0"  BorderThickness="0,0,0,1" Margin="5,0"/>
                         </DockPanel>
 
 
-                        <Button  Margin="0,2" Content="返回原点"  Click="GoHome_Click" />
+                        <Button  Margin="0,2" Content="{x:Static properties:Resources.HomePosition}"  Click="GoHome_Click" />
                         <DockPanel>
-                            <Button DockPanel.Dock="Right" Content="获取位置"  Click="GetPosition_Click" />
-                            <TextBlock Text="当前位置：" Width="60"/>
+                            <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.AcquirePosition}"  Click="GetPosition_Click" />
+                            <TextBlock Text="{x:Static properties:Resources.CurrentPosition}" Width="60"/>
                             <TextBox IsReadOnly="True" Text="{Binding Config.MotorConfig.Position}" Background="Transparent" BorderThickness="0,0,0,0"  Margin="5,0" Width="60"/>
                             <TextBox IsReadOnly="True" Text="{Binding Config.MotorConfig.VIDPosition}" Background="Transparent" BorderThickness="0,0,0,0"  Margin="5,0"/>
                         </DockPanel>
