--- a/Engine/ColorVision.Engine/Services/Devices/Camera/InfoCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/InfoCamera.xaml
@@ -94,7 +94,7 @@
                             </UniformGrid>
                         </ScrollViewer>
                     </TabItem>
-                    <TabItem Header="基本信息">
+                    <TabItem Header="{x:Static properties:Resources.BasicInformation}">
                         <StackPanel Margin="5">
                             <Grid>
                                 <StackPanel Margin="5" >
@@ -103,15 +103,15 @@
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.Code}"/>
                                     </DockPanel>
                                     <DockPanel>
-                                        <TextBlock Text="发送信道:" Width="120"/>
+                                        <TextBlock Text="{x:Static properties:Resources.SendChannel}" Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SendTopic}"/>
                                     </DockPanel>
                                     <DockPanel>
-                                        <TextBlock Text="接收信道:" Width="120"/>
+                                        <TextBlock Text="{x:Static properties:Resources.ReceiveChannel}" Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.SubscribeTopic}"/>
                                     </DockPanel>
                                     <DockPanel>
-                                        <TextBlock Text="心跳时间"  Width="120"/>
+                                        <TextBlock Text="{x:Static properties:Resources.HeartbeatTime}"  Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0" Text="{Binding Config.HeartbeatTime}"/>
                                     </DockPanel>
                                     <DockPanel Margin="0,2" >
@@ -119,12 +119,12 @@
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.ServiceToken}"/>
                                     </DockPanel>
                                     <DockPanel>
-                                        <TextBlock Text="设备自连接"  Width="120"/>
+                                        <TextBlock Text="{x:Static properties:Resources.DeviceAutoConnect}"  Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.IsAutoOpen}"/>
                                     </DockPanel>
                                     <DockPanel>
-                                        <Button DockPanel.Dock="Right" Content="管理" Command="{Binding OpenPhyCameraMangerCommand}"  />
-                                        <TextBlock Text="绑定物理相机代码"  Width="120"/>
+                                        <Button DockPanel.Dock="Right" Content="{x:Static properties:Resources.Manager}" Command="{Binding OpenPhyCameraMangerCommand}"  />
+                                        <TextBlock Text="{x:Static properties:Resources.BindPhysicalCameraCode}"  Width="120"/>
                                         <TextBox IsReadOnly="True" Style="{StaticResource TextBox.Small}" BorderThickness="0"  Text="{Binding Config.CameraCode ,Mode=OneWay }"/>
                                     </DockPanel>
                                 </StackPanel>
