--- a/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
@@ -7,9 +7,11 @@
              xmlns:st ="clr-namespace:ST.Library.UI.NodeEditor;assembly=ST.Library.UI"
              mc:Ignorable="d" 
              PreviewKeyDown="UserControl_PreviewKeyDown"
-              xmlns:im="clr-namespace:ColorVision.ImageEditor;assembly=ColorVision.ImageEditor"
+             xmlns:im="clr-namespace:ColorVision.ImageEditor;assembly=ColorVision.ImageEditor"
              xmlns:wf="clr-namespace:System.Windows.Forms;assembly=System.Windows.Forms"
+             xmlns:properties ="clr-namespace:ColorVision.Engine.Properties"
              d:DataContext="{d:DesignInstance local:ViewFlow}"
+             
              d:DesignHeight="600" d:DesignWidth="800" Background="{DynamicResource GlobalBackground}" Initialized="UserControl_Initialized" >
     <Grid Margin="0,0.5,0,0">
         <Grid.ColumnDefinitions >
@@ -84,8 +86,8 @@
                         <TextBlock Text="{Binding FlowEngineManager.Batch.Code}" />
                     </DockPanel>
                     <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
-                        <Button Content="查询结果" Click="Button_Click" Margin="0,0,5,0"/>
-                        <Button Content="流程结果管理"  Command="{Binding FlowEngineManager.MeasureBatchManagerCommand}"/>
+                        <Button Content="{x:Static properties:Resources.SearchResults}" Click="Button_Click" Margin="0,0,5,0"/>
+                        <Button Content="{x:Static properties:Resources.FlowResultManagement}"  Command="{Binding FlowEngineManager.MeasureBatchManagerCommand}"/>
                     </StackPanel>
                     <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
                         <Button Content="解析管理" Click="Button_Click_1"/>
