--- a/Engine/ColorVision.Engine/Batch/BatchProcessManagerWindow.xaml
+++ b/Engine/ColorVision.Engine/Batch/BatchProcessManagerWindow.xaml
@@ -6,6 +6,7 @@
         xmlns:local="clr-namespace:ColorVision.Engine.Batch"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance local:BatchManager}"
+        xmlns:properties="clr-namespace:ColorVision.Engine.Properties"
         Title="流程处理配置" Height="800" Width="1000" Initialized="Window_Initialized">
     <Window.Resources>
         <local:TypeNameConverter x:Key="TypeNameConverter"/>
@@ -34,10 +35,10 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock Text="名称:" VerticalAlignment="Center" Margin="0 0 4 0"/>
+                <TextBlock Text="{x:Static properties:Resources.Name}" VerticalAlignment="Center" Margin="0 0 4 0"/>
                 <TextBox Grid.Column="1" Text="{Binding NewMetaName, UpdateSourceTrigger=PropertyChanged}"/>
 
-                <TextBlock Grid.Column="2" Text="流程模板:" VerticalAlignment="Center" Margin="12 0 4 0"/>
+                <TextBlock Grid.Column="2" Text="{x:Static properties:Resources.FlowTemplate}" VerticalAlignment="Center" Margin="12 0 4 0"/>
                 <ComboBox Grid.Column="3" ItemsSource="{Binding templateModels}" DisplayMemberPath="Key" SelectedItem="{Binding SelectedTemplate}"/>
 
                 <TextBlock Grid.Column="4" Text="处理类:" VerticalAlignment="Center" Margin="12 0 4 0"/>
