添加本地化资源并更新菜单字符串
在 `Resources.Designer.cs` 中添加多个本地化字符串资源，并在各语言的 `.resx` 文件中添加相应翻译。更新 `Resources.resx` 版本至 2.0，添加 XML 元数据结构。在多个菜单类文件中，将硬编码字符串替换为本地化资源。在 `ViewFlow.xaml` 中，使用本地化资源替换按钮内容。

--- a/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
+++ b/Engine/ColorVision.Engine/Templates/Flow/ViewFlow.xaml
@@ -90,8 +90,8 @@
                         <Button Content="{x:Static properties:Resources.FlowResultManagement}"  Command="{Binding FlowEngineManager.MeasureBatchManagerCommand}"/>
                     </StackPanel>
                     <StackPanel Margin="0,0,0,5" Orientation="Horizontal">
-                        <Button Content="解析管理" Click="Button_Click_1"/>
-                        <Button Content="解析" Click="BatchProcess_Click"/>
+                        <Button Content="{x:Static properties:Resources.ParsingManagement}" Click="Button_Click_1"/>
+                        <Button Content="{x:Static properties:Resources.Parsing}" Click="BatchProcess_Click"/>
                     </StackPanel>
                     <ProgressBar x:Name="ProgressBar1" Maximum="100"/>
                     <TextBox x:FieldModifier="public"  x:Name="logTextBox" Background="Transparent" TextWrapping="WrapWithOverflow" Height="105" Grid.Row="1" Padding="5,5" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" BorderThickness="0"  VerticalAlignment="Stretch" VerticalContentAlignment="Top" IsReadOnly="True" Margin="0,0,0,5" />
