本地化资源更新与代码优化
在多个文件中，将硬编码的中文字符串替换为资源文件中的静态资源引用，以支持多语言本地化。具体更改包括：
- 在 `HomePage.xaml` 和 `HomePage.xaml.cs` 中，使用资源文件中的静态资源引用替换硬编码字符串。
- 在 `Resources.Designer.cs` 中，添加和删除了一些本地化字符串属性。
- 在多个 `.resx` 文件中，添加了新的本地化字符串条目。
- 在 `TemplateFlow.cs` 和 `TemplateEditorWindow.xaml` 中，更新了属性和文本以使用资源文件中的静态资源引用。

--- a/Engine/ColorVision.Engine/Archive/HomePage.xaml
+++ b/Engine/ColorVision.Engine/Archive/HomePage.xaml
@@ -6,6 +6,7 @@
       xmlns:local="clr-namespace:ColorVision.Engine.Archive"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
+      xmlns:properties ="clr-namespace:ColorVision.Engine.Properties"
       Title="HomePage" Loaded="Page_Loaded" Initialized="Page_Initialized">
     <Page.Resources>
         <Style TargetType="TextBlock" >
@@ -22,7 +23,7 @@
                     </Grid.RowDefinitions>
                     <Image Source="/ColorVision.Engine;component/Assets/Image/background0.png"/>
                     <Image Source="/ColorVision.Engine;component/Assets/Image/综合查询.png" Margin="30"/>
-                    <TextBlock Grid.Row="1" Text="综合查询" HorizontalAlignment="Center" FontSize="18"/>
+                    <TextBlock Grid.Row="1" Text="{x:Static properties:Resources.IntegratedQuery}" HorizontalAlignment="Center" FontSize="18"/>
                 </Grid>
             </UserControl>
             <UserControl Width="200" MouseLeftButtonUp="UserControl_MouseLeftButtonUp" Tag="ArchivePage">
@@ -33,7 +34,7 @@
                     </Grid.RowDefinitions>
                     <Image Source="/ColorVision.Engine;component/Assets/Image/background0.png"/>
                     <Image Source="/ColorVision.Engine;component/Assets/Image/归档查询.png" Margin="50"/>
-                    <TextBlock Grid.Row="1" Text="归档查询" HorizontalAlignment="Center" FontSize="18"/>
+                    <TextBlock Grid.Row="1" Text="{x:Static properties:Resources.ArchiveQuery}" HorizontalAlignment="Center" FontSize="18"/>
                 </Grid>
             </UserControl>
         </UniformGrid>
