本地化字符串更新和UI文本替换
在 `EngineCommands.cs` 中，将菜单项标题从硬编码字符串更改为使用资源文件中的本地化字符串，包括“开始执行”、“停止执行”和“拍照”等命令。

在 `Resources.Designer.cs` 中，添加了多个新的本地化字符串资源，如“Connect”、“CreateCopy”、“CreateSample”、“MoveDown”、“MoveUp”、“PhysicalCamera”、“SetSnFirst”、“StartExecition”和“StopExecution”等。

在 `Resources.en.resx`、`Resources.fr.resx`、`Resources.ja.resx`、`Resources.ko.resx`、`Resources.resx`、`Resources.ru.resx` 和 `Resources.zh-Hant.resx` 中，添加了相应的本地化字符串，以支持多语言显示。

在 `EditCamera.xaml`、`DisplayCfwPort.xaml` 和 `EditFlowDevice.xaml` 中，将硬编码的 UI 文本替换为使用资源文件中的本地化字符串，以提高可维护性和国际化支持。

--- a/Engine/ColorVision.Engine/Services/Devices/Camera/EditCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/EditCamera.xaml
@@ -41,12 +41,12 @@
                             </DockPanel>
                             <DockPanel Margin="0,0,0,0" >
                                 <TextBlock Text="{x:Static properties:Resources.DeviceAutoConnect}" Width="120"/>
-                                <CheckBox Content="启用" IsChecked="{Binding IsAutoOpen}"/>
+                                <CheckBox Content="{x:Static properties:Resources.IsEnable}" IsChecked="{Binding IsAutoOpen}"/>
                             </DockPanel>
 
                             <DockPanel Margin="0,2">
                                 <Button Content="{x:Static properties:Resources.ApplySettings}" DockPanel.Dock="Right" Click="UpdateConfig_Click"/>
-                                <TextBlock Text="物理相机Code" Width="120"/>
+                                <TextBlock Text="{x:Static properties:Resources.PhysicalCamera}" Width="120"/>
                                 <hc:ComboBox  x:Name="CameraPhyID" IsEditable="True" SelectedIndex="0" Text="{Binding CameraCode}" SelectionChanged="CameraPhyID_SelectionChanged" hc:InfoElement.ShowClearButton="True"  />
                             </DockPanel>
                             <DockPanel Margin="0,2">
